# MCST_Summer_Internship

./: NewPass.cpp  README.md
Week_3_Compilers/: 1.c  lib.cpp  main.c  number.c  summary.txt
Week_5_LLVM/: Makefile  NewPass.cpp  edge.h  test.ll  tests.cpp
Week_6_Pass/: CMakeLists.txt  Makefile  NewPass.cpp  test4.ll
Week_6_Pass/tests/: test.ll  test2.ll  test3.ll
Задание 1.1/: code  graph.h  node.h
Неделя_1_Графы/1.1/: MAKEFILE  Makefile  code  code.cpp  edge.h  graph.h  node.h  program  test_pro_numbering.h  test_rpo_numbering.h  tests  tests.cpp
Неделя_1_Графы/1.2/: MAKEFILE  Makefile  code  code.cpp  dijkstra.h  graph.h  my  node.h  program  test_dijkstra.h  test_rpo_numbering.h  tests.cpp
Неделя_1_Графы/1.3/: MAKEFILE  Makefile  code  code.cpp  dijkstra.h  fordfulkerson.h  graph.h  program  test_dijkstra.h  test_max_flow.h  test_pro_numbering.h  tests.cpp
Неделя_1_Графы/1.4/: MAKEFILE  Makefile  code  code.cpp  graph.h  program  tarjan.h  test_max_flow.h  test_pro_numbering.h  test_tarjan.h  tests.cpp
Неделя_1_Графы/Задание 1.1/: edge.h
